# moth

./: MOTH_ARCHITECTURE.md  README.md  detailed_technical.md  file-structure.txt  file_system.md  moth-convo-perpl-claude.txt  temp-scartch.txt
docs/: Moth_Changelog.docx  Moth_Factory_Presets_v0.2.0.docx  Moth_Installation_Guide_v0.2.0.docx  chatter-convo-perpl-claude.txt  convo-claude-opus-46.txt  convo-perpl-claude.txt  handover-perpl-claude.txt  moth-claude-opus-46-2.txt  moth-intro-card.txt  temp_scartch.txt
moth-vst/: Cargo.toml
moth-vst/src/: editor.rs  lib.rs
v0.1.0/: Cargo.toml  file_system.md
v0.1.0/moth-vst/src/: editor.rs
v0.1.0/src/: exciter_dsp.rs  instrument_dna.rs  lib.rs  midi1.rs
v0.1.0/v0.2.0/: Cargo.toml
v0.1.0/v0.2.0/src/: dsp_core.rs  gesture.rs  nonlin.rs  spatial.rs  vibrator.rs
v0.2.0/: Cargo.toml
v0.2.0/moth-vst/: README.md
v0.2.0/src/: exciter.rs  exciter_dsp.rs
v0.2.0/v0.2.0/src/: exciter.rs  lib.rs  midi1.rs  resonator.rs  voice.rs
v0.3.0/: Cargo.toml
v0.3.0/moth-vst/: Cargo.toml
v0.3.0/moth-vst/src/: editor.rs  lib.og  lib.rs
v0.3.0/v0.3.0/: Cargo.toml
v0.3.0/v0.3.0/src/: exciter_dsp.rs  gesture.rs  instrument_dna.rs  lib.rs  nonlin.rs  resonator.rs  spatial.rs  vibrator.rs  voice.rs
v0.4.0/: Cargo.toml  README.md  in-flight-warnings.txt
v0.4.0/moth-vst/: Cargo.toml
v0.4.0/moth-vst/assets/: faceplate.og
v0.4.0/moth-vst/src/: editor.rs  lib.rs
v0.4.0/v0.4.0/: Cargo.toml
v0.4.0/v0.4.0/src/: dsp_core.rs  exciter.rs  exciter_dsp.rs  instrument_dna.rs  midi1.rs  voice.rs
